--- a/.github/workflows/release_notes.yml
+++ b/.github/workflows/release_notes.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Determine Tag
         id: tag
         run: |
-          echo "TAG=${{ github.event.inputs.tag || github.ref }}" >> $GITHUB_ENV
+          echo "TAG=${{ github.event.inputs.tag || steps.tag.outputs.tag }}" >> $GITHUB_ENV
 
       - name: Generate Release Notes
         id: release-notes
