--- a/.github/workflows/release_notes.yml
+++ b/.github/workflows/release_notes.yml
@@ -28,7 +28,7 @@ jobs:
         id: tags
         if: ${{ github.event_name == 'push' }}
         run: |
-          current_tag=basename ${{ github.ref }}
+          current_tag=$(basename ${{ github.ref }})
           previous_tag=$(git describe --abbrev=0 --tags $(git rev-list --tags --skip=1 --max-count=1))
           echo "CURRENT_TAG=${current_tag}" >> $GITHUB_ENV
           echo "PREVIOUS_TAG=${previous_tag}" >> $GITHUB_ENV
