--- a/.github/workflows/release_notes.yml
+++ b/.github/workflows/release_notes.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ncipollo/release-action@v1
       with:
-        token: ${github.token}
+        token: ${{github.token}}
         artifacts: "release.tar.gz,foo/*.txt"
         bodyFile: "body.md"
         generateReleaseNotes: true
