--- a/.github/workflows/release_notes.yml
+++ b/.github/workflows/release_notes.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: ncipollo/release-action@v1
       with:
         token: ${{github.token}}
-        artifacts: "release.tar.gz,foo/*.txt"
         bodyFile: "body.md"
+        draft: true
         generateReleaseNotes: true
         makeLatest: true
