--- a/.github/workflows/release_notes.yml
+++ b/.github/workflows/release_notes.yml
@@ -13,10 +13,9 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v3
-    - uses: ncipollo/release-action@v1
+    - name: Release
+      uses: softprops/action-gh-release@v1
       with:
-        token: ${{github.token}}
-        bodyFile: "body.md"
+        token: ${{ github.token }}
         draft: true
-        generateReleaseNotes: true
-        makeLatest: true
+        generate_release_notes: true
